--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "2"
 services:
   ros2:
-    build: .
+    build:
+      context: .
+      # args:
+      #   - HTTP_PROXY=$HTTP_PROXY
+      #   - http_proxy=$http_proxy
+      #   - HTTPS_PROXY=$HTTPS_PROXY
+      #   - https_proxy=$https_proxy
     ports:
       - "2018:2018"
+
+    # environment:
+    #   - HTTP_PROXY=$HTTP_PROXY
+    #   - http_proxy=$http_proxy
+    #   - HTTPS_PROXY=$HTTPS_PROXY
+    #   - https_proxy=$https_proxy
